--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nkanyezi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <style>
+        /* Custom CSS styles */
+        #chat {
+            margin-top: 20px;
+        }
 
+        .message-card {
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+        }
+
+        /* Additional styles for the table */
+        .response-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 10px;
+        }
+
+        .response-row {
+            border: 1px solid #ccc;
+        }
+
+        .response-cell {
+            padding: 10px;
+            vertical-align: top;
+        }
+    </style>
 </head>
 <body>
-    <h1>Nkanyezi By Skywalkingzulu</h1>
-    <div>
-        <div id="chat"></div>
-        <input type="text" id="userInput" placeholder="Type your message...">
-        <button id="sendButton">Send</button>
+    <h1 class="text-center">Nkanyezi By Skywalkingzulu</h1>
+    <div class="container">
+        <div id="chat" class="col-md-6 offset-md-3">
+            <!-- The tables for responses will be dynamically generated here -->
+        </div>
+        <input type="text" id="userInput" class="form-control" placeholder="Type your message...">
+        <button id="sendButton" class="btn btn-primary">Send</button>
     </div>
-    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
