--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         <button id="sendButton" class="btn btn-primary">Send</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
+     <script src="script.js"></script>
+ 
 </body>
 </html>
