--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Nkanyezi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Include the Netlify Identity widget script -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
         /* Custom CSS styles */
         #chat {
@@ -41,6 +43,18 @@
             margin: 5px 0; /* Adjust the margin to control the spacing */
         }
     </style>
+    <script>
+        const netlifyIdentity = window.netlifyIdentity;
+
+        // Check the login state
+        const user = netlifyIdentity.currentUser();
+
+        if (!user) {
+            // User is not logged in
+            // Redirect to the login page
+            window.location.href = '/login.html'; // Replace with the actual login page URL
+        }
+    </script>
 </head>
 <body>
     <h1 class="text-center">Nkanyezi By Skywalkingzulu</h1>
