--- a/public/login.html
+++ b/public/login.html
@@ -1,115 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-       <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Nkanyezi</title>
+    <title>Login or Join</title>
+    <!-- Include the Netlify Identity script -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Use the same custom CSS styles as index.html */
         /* Custom CSS styles */
-        #chat {
-            margin-top: 20px;
-        }
-
-        .user-message {
-            background-color: #e0e0e0;
-            margin: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            clear: both;
-            float: left;
-            max-width: 70%;
-        }
-
-        .assistant-message {
-            background-color: #4caf50;
-            color: white;
-            margin: 10px;
-            padding: 10px;
-            border-radius: 5px;
-            clear: both;
-            float: right;
-            max-width: 70%;
-        }
-
-        /* Style for the separator */
-        hr {
-            border: 0;
-            height: 1px;
-            background-color: #ccc; /* Color of the separator line */
-            margin: 5px 0; /* Adjust the margin to control the spacing */
-        }
-
-        /* Additional styles for the login form */
-        .login-container {
-            max-width: 300px;
-            margin: 0 auto;
+        body {
             padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #fff;
-            box-shadow: 0px 0px 5px 0px #ccc;
         }
 
-        .login-input {
-            margin-bottom: 10px;
+        .form-container {
+            background-color: #f2f2f2;
+            padding: 20px;
+            border-radius: 5px;
         }
 
-        .login-button {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
+        .btn-container {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .btn-container button {
+            margin: 5px;
         }
     </style>
 </head>
 <body>
-    <h1 class="text-center">Login to Nkanyezi</h1>
+    <h1 class="text-center">Login or Join</h1>
+    
     <div class="container">
-        <div class="login-container">
-            <form id="login-form">
-                <div class="form-group login-input">
-                    <input type="email" class="form-control" id="email" placeholder="Email" required>
-                </div>
-                <div class="form-group login-input">
-                    <input type="password" class="form-control" id="password" placeholder="Password" required>
-                </div>
-                <button type="submit" class="btn btn-primary login-button">Login</button>
-            </form>
+        <div class="row">
+            <div class="col-md-6 offset-md-3 form-container">
+                <!-- Login Form -->
+                <form id="loginForm">
+                    <h2>Login</h2>
+                    <div class="mb-3">
+                        <label for="loginEmail" class="form-label">Email:</label>
+                        <input type="email" id="loginEmail" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="loginPassword" class="form-label">Password:</label>
+                        <input type="password" id="loginPassword" class="form-control" required>
+                    </div>
+                    <div class="btn-container">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                        <button id="signupButton" class="btn btn-secondary">Join</button>
+                    </div>
+                </form>
+
+                <!-- Sign Up Form -->
+                <form id="signupForm" style="display: none;">
+                    <h2>Sign Up</h2>
+                    <div class="mb-3">
+                        <label for="signupEmail" class="form-label">Email:</label>
+                        <input type="email" id="signupEmail" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="signupPassword" class="form-label">Password:</label>
+                        <input type="password" id="signupPassword" class="form-control" required>
+                    </div>
+                    <div class="btn-container">
+                        <button type="submit" class="btn btn-primary">Join</button>
+                        <button id="loginButton" class="btn btn-secondary">Login</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script>
-        // Add JavaScript code for handling login here
 
+    <script>
+        // Initialize Netlify Identity
         const netlifyIdentity = window.netlifyIdentity;
 
-        // Initialize Netlify Identity
         netlifyIdentity.init();
 
-        // Handle form submission
-        const loginForm = document.getElementById('login-form');
-        loginForm.addEventListener('submit', function (event) {
-            event.preventDefault();
+        // Login form
+        const loginForm = document.getElementById("loginForm");
+        const loginEmail = document.getElementById("loginEmail");
+        const loginPassword = document.getElementById("loginPassword");
 
-            // Get user inputs
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+        // Sign up form
+        const signupForm = document.getElementById("signupForm");
+        const signupEmail = document.getElementById("signupEmail");
+        const signupPassword = document.getElementById("signupPassword");
 
-            // Log in the user
-            netlifyIdentity.login(email, password, (err) => {
-                if (err) {
-                    console.error('Login failed:', err);
-                    // Handle login failure (e.g., show an error message)
-                } else {
-                    console.log('Login successful');
-                    // Redirect the user to the main page or another protected page
-                    window.location.href = '/index.html'; // Replace with the desired page URL
-                }
-            });
+        // Buttons to toggle forms
+        const loginButton = document.getElementById("loginButton");
+        const signupButton = document.getElementById("signupButton");
+
+        // Toggle to the login form by default
+        loginForm.style.display = "block";
+        signupForm.style.display = "none";
+
+        // Event listeners for toggling between login and signup forms
+        loginButton.addEventListener("click", () => {
+            loginForm.style.display = "block";
+            signupForm.style.display = "none";
+        });
+
+        signupButton.addEventListener("click", () => {
+            loginForm.style.display = "none";
+            signupForm.style.display = "block";
+        });
+
+        // Login form submission
+        loginForm.addEventListener("submit", (e) => {
+            e.preventDefault();
+            const email = loginEmail.value;
+            const password = loginPassword.value;
+
+            // Perform login logic here using Netlify Identity
+            // You can use netlifyIdentity.login({ email, password }) to log in the user
+        });
+
+        // Sign up form submission
+        signupForm.addEventListener("submit", (e) => {
+            e.preventDefault();
+            const email = signupEmail.value;
+            const password = signupPassword.value;
+
+            // Perform sign up logic here using Netlify Identity
+            // You can use netlifyIdentity.signup({ email, password }) to sign up the user
         });
     </script>
 </body>
