--- a/public/login.html
+++ b/public/login.html
@@ -171,7 +171,7 @@
                 await netlifyIdentity.login({ email, password });
 
                 // Optionally, you can redirect the user to another page after successful sign-up and login
-                // window.location.href = '/dashboard.html'; // Replace with the actual URL
+               window.location.href = '/index.html'; // Replace with the actual URL
             } catch (error) {
                 console.error('Sign-up failed:', error);
                 // Handle sign-up error (e.g., display an error message to the user)
