--- a/public/login.html
+++ b/public/login.html
@@ -119,7 +119,7 @@
             console.log('User logged in:', user);
     
             // Optionally, you can redirect the user to another page after successful login
-            // window.location.href = '/dashboard.html'; // Replace with the actual URL
+            // window.location.href = '/index.html'; // Replace with the actual URL
         } catch (error) {
             console.error('Login failed:', error);
             // Handle login error (e.g., display an error message to the user)
