--- a/public/login.html
+++ b/public/login.html
@@ -148,6 +148,6 @@
         }
     });
 </script>
-
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </body>
 </html>
