--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Nkanyezi</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Include the Netlify Identity widget script -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -21,7 +26,8 @@
             border-radius: 5px;
             clear: both;
             float: left;
-            max-width: 70%;
+            max-width: 80%; /* Increase the maximum width to 80% */
+            word-wrap: break-word; /* Add this property to allow word wrapping */
         }
 
         .assistant-message {
@@ -32,7 +38,8 @@
             border-radius: 5px;
             clear: both;
             float: right;
-            max-width: 70%;
+            max-width: 92%;
+            word-wrap: break-word; /* Add this property to allow word wrapping */word-wrap: break-word; /* Add this property to allow word wrapping */
         }
 
         /* Style for the separator */
@@ -43,14 +50,59 @@
             margin: 5px 0; /* Adjust the margin to control the spacing */
         }
     </style>
+    <script>
+      // Function to check if the user is logged in
+    function checkLoginStatus() {
+      // Check if the 'username' cookie exists
+      const usernameCookie = getCookie("username");
+
+      if (!usernameCookie) {
+        // If the 'username' cookie is not found, redirect to the login page
+        window.location.href = 'login.html'; // Replace with your login page URL
+      }
+    }
+
+    // Function to retrieve a specific cookie by name
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(";").shift();
+    }
+
+    // Call the checkLoginStatus function when the page loads
+    window.addEventListener("load", checkLoginStatus);
+  </script>
 </head>
 <body>
+
+   <!-- Navigation bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Nkanyezi</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Assignments</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
     <h1 class="text-center">Nkanyezi By Skywalkingzulu</h1>
     <div class="container">
         <div id="chat" class="col-md-6 offset-md-3">
             <!-- The chat messages and separators will be dynamically generated here -->
+        
         </div>
+
         <input type="text" id="userInput" class="form-control" placeholder="Type your message...">
+        <br /><button id="pasteButton" class="btn btn-secondary">Paste from Document</button>
+<br /> 
         <button id="sendButton" class="btn btn-primary">Send</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
