--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,19 @@
     <!-- Include the Netlify Identity widget script -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <style>
+        /* Add CSS styles to the body to enable scrolling */
+html, body {
+    background-color: white;
+    overflow-y: auto; /* Enable vertical scrolling for the entire page */
+}
+
         /* Custom CSS styles */
         #chat {
             margin-top: 20px;
         }
 
         .user-message {
-            background-color: #e0e0e0;
+            background-color: #ccc;
             margin: 10px;
             padding: 10px;
             border-radius: 5px;
@@ -31,7 +37,7 @@
         }
 
         .assistant-message {
-            background-color: #4caf50;
+            background-color: #ccc;
             color: white;
             margin: 10px;
             padding: 10px;
@@ -49,8 +55,17 @@
             background-color: #ccc; /* Color of the separator line */
             margin: 5px 0; /* Adjust the margin to control the spacing */
         }
+
+        /* CSS styles for chat container */
+.chat-container {
+    height: 400px;
+    width: 80%; /* Set a fixed height for the container */
+    overflow-y: auto; /* Enable vertical scrolling when the content overflows */
+}
+
     </style>
-    <script>
+   <script>
+
       // Function to check if the user is logged in
     function checkLoginStatus() {
       // Check if the 'username' cookie exists
@@ -71,9 +86,11 @@
 
     // Call the checkLoginStatus function when the page loads
     window.addEventListener("load", checkLoginStatus);
+
+    
   </script>
 </head>
-<body>
+<body >
 
    <!-- Navigation bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -93,19 +110,25 @@
     </div>
 </nav>
 
-    <h1 class="text-center">Nkanyezi By Skywalkingzulu</h1>
-    <div class="container">
-        <div id="chat" class="col-md-6 offset-md-3">
+    <h1 class="text-center" >Nkanyezi </h1>
+    <div class="fixed-bottom bg-light p-3" >
+        <div class="container" >
+            <div class="row" >
+                      <div id="chat" class="col-md-6 offset-md-3 chat-container" >
             <!-- The chat messages and separators will be dynamically generated here -->
         
         </div>
 
-        <input type="text" id="userInput" class="form-control" placeholder="Type your message...">
-        <br /><button id="pasteButton" class="btn btn-secondary">Paste from Document</button>
-<br /> 
-        <button id="sendButton" class="btn btn-primary">Send</button>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+                <div class="col-9" >
+                    <input type="text" id="userInput" class="form-control" placeholder="Type your message..." >
+                </div>
+                <div class="col-3">
+                    <button id="pasteButton" class="btn btn-secondary">Paste </button>
+                    <button id="sendButton" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
